[package]
name = "git-persona"
version = "0.1.0"
edition = "2021"
authors = ["EricLBuehler"]
description = "A CLI tool to manage and switch between Git user profiles"
license = "MIT"
repository = "https://github.com/EricLBuehler/git-persona"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[[bin]]
name = "git-persona"
path = "src/main.rs"
